# zephyr

boards/arm/lpcxpresso54114/: lpcxpresso54114_m0_defconfig
boards/arm/lpcxpresso55s69/: CMakeLists.txt  Kconfig.defconfig  board.cmake  lpcxpresso55s69.dtsi  lpcxpresso55s69_cpu0.dts  lpcxpresso55s69_cpu0_defconfig  lpcxpresso55s69_cpu1.dts  lpcxpresso55s69_cpu1_defconfig  lpcxpresso55s69_ns.dts  lpcxpresso55s69_ns_defconfig  pinmux.c
boards/shields/mikroe_eth_click/: Kconfig.shield  mikroe_eth_click.overlay
drivers/entropy/: CMakeLists.txt  Kconfig.mcux  entropy_mcux_rng.c
drivers/ethernet/: Kconfig.enc28j60  Kconfig.mcux  eth_enc28j60.c  eth_enc28j60_priv.h  eth_mcux.c
drivers/flash/: Kconfig.mcux  soc_flash_mcux.c
drivers/gpio/: gpio_mcux_lpc.c
drivers/ipm/: ipm_mcux.c
drivers/spi/: spi_mcux_flexcomm.c
dts/arm/nxp/: nxp_lpc55S6x.dtsi  nxp_lpc55S6x_common.dtsi  nxp_lpc55S6x_ns.dtsi
dts/bindings/flash_controller/: nxp,lpc-iap.yaml
dts/bindings/gpio/: mikro-bus.yaml
dts/bindings/rng/: nxp,lpc-rng.yaml
modules/: Kconfig.mcux
samples/net/dhcpv4_client/: prj.conf
samples/tfm_integration/psa_handshake_simple/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/tfm_integration/psa_level_1/: CMakeLists.txt  sample.yaml
samples/tfm_integration/standalone/: CMakeLists.txt  prj.conf
samples/tfm_integration/standalone/remote/: CMakeLists.txt  prj.conf
samples/tfm_integration/standalone/remote/src/: main_remote.c
samples/tfm_integration/standalone/src/: main_master.c
samples/tfm_integration/tfm_ipc/: CMakeLists.txt
(+32 files in other folders)
